--- a/Infrastucture/Infrastucture.csproj
+++ b/Infrastucture/Infrastucture.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.3"/>
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.5.0"/>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.0"/>
+    <PackageReference Include="Stripe.net" Version="36.8.0"/>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
