--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -15,5 +15,5 @@
     "Key": "super secret mojomi",
     "Issuer": "https://localhost:5001/"
   },
-  "ApiUrl": "https://localhost:5001/"
+  "ApiUrl": "https://localhost:5001/Content/"
 }
