--- a/Infrastucture/Infrastucture.csproj
+++ b/Infrastucture/Infrastucture.csproj
@@ -1,5 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
+    <None Include="Data\SeedData\**" CopyToOutputDirectory="PreserveNewest" />
     <ProjectReference Include="..\Core\Core.csproj"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.3"/>
@@ -9,6 +10,7 @@
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.5.0"/>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.0"/>
     <PackageReference Include="Stripe.net" Version="36.8.0"/>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1"/>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
